Address comments
- Annotate with Preview
- Fix isUnnamed hierarchy
- Flow names.empty for underscore in both model and API
- Adjust pretty printing and annotation pretty printing
- Fix guard bindings (great catch and thx @lahodaj!)
- Fix TreeVisitor
- Remove test with lambda which has a parse error from VarTree (names.empty is used to signal error)
- Various adjustments

Co-authored-by: Jan Lahoda <jan.lahoda@oracle.com>